<resources>
    <string name="app_name">Score Counter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_round">Add Round</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="confirm">Confirm</string>
    <string name="all">All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>

    <string name="edit_text_hint_save_file">Name</string>

    <string name="menu_redo">Redo</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_add_round">Add round</string>
    <string name="menu_reset">Reset scores</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_settings">Settings</string>

    <string name="reset_confirm_dialog_title">Save session</string>
    <string name="reset_confirm_dialog_message">Save session before reset?</string>

    <string name="save_session_dialog_title">Save session</string>
    <string name="load_session_dialog_title">Load session</string>
    <string name="load_session_empty">No saved sessions</string>
    <string name="save_session_overwrite_dialog_title">Save session</string>
    <string name="save_session_overwrite_dialog_message">Overwrite save \"%1$s\"?</string>

    <string name="save_session_dialog_error_empty_name">Set a name</string>
    <string name="save_session_dialog_error_invalid_name">Invalid name (special)</string>
    <string name="save_session_dialog_error">Error saving session</string>

    <string name="settings">Settings</string>
    <string name="settings_scoreboard">Scoreboard</string>
    <string name="settings_scoreboard_number">Number of scores</string>
    <string name="settings_scoreboard_layout">Layout</string>
    <string name="settings_scoreboard_reset">Reset scoreboard</string>
    <string name="settings_scoreboard_reset_summary">Reset the scoreboard scores and settings</string>
    <string name="settings_scoreboard_reset_dialog_title">@string/settings_scoreboard_reset</string>
    <string name="settings_scoreboard_reset_dialog_message">This will reset the scores and settings of the scoreboard.
        Save any changes you want to keep.</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_vibrate_duration">Vibrate duration (ms)</string>
    <string name="settings_other">Other</string>
    <string name="settings_other_keep_screen_on">Keep screen on</string>
    <string name="settings_other_keep_screen_on_summary_on">The app will force the screen stay on</string>
    <string name="settings_other_keep_screen_on_summary_off">The app will not force the screen stay on</string>

    <string name="settings_error_integer">Setting must be a integer</string>

    <string name="score_unit_settings_dialog_title">Score settings</string>
    <string name="score_unit_settings_dialog_label">Name</string>
    <string name="score_unit_settings_dialog_color">Color</string>
    <string name="score_unit_settings_dialog_step">Step</string>
    <string name="score_unit_settings_dialog_style">Style</string>
    <string name="score_unit_color_light">Light</string>
    <string name="score_unit_color_dark">Dark</string>
    <string name="score_unit_color_blue">Blue</string>
    <string name="score_unit_color_red">Red</string>
    <string name="score_unit_color_green">Green</string>
    <string name="score_unit_color_cyan">Cyan</string>
    <string name="score_unit_color_yellow">Yellow</string>
    <string name="score_unit_color_purple">Purple</string>
    <string name="score_unit_style_button_right">Buttons on right</string>
    <string name="score_unit_style_button_left">Buttons on left</string>
    <string name="score_unit_style_button_bottom">Buttons on bottom</string>
    <string name="score_unit_style_button_top">Buttons on top</string>
    <string name="score_unit_style_button_side">Buttons on sides</string>
    <string name="score_unit_style_integrated_vertical">Tap score (vertical)</string>
    <string name="score_unit_style_integrated_horizontal">Tap score (horizontal)</string>

    <string name="score_unit_settings_dialog_error_step">Step must be positive</string>

    <string name="dialog_increment_title">Increment score: %1$s</string>
    <string name="dialog_decrement_title">Decrement score: %1$s</string>
</resources>
