<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_undo"
        android:title="@string/menu_undo"
        android:icon="@drawable/ic_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_redo"
        android:title="@string/menu_redo"
        android:icon="@drawable/ic_redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_round"
        android:title="@string/menu_add_round"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_load"
        android:title="@string/menu_load"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

</menu>