<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:labelFor="@id/label_edit_text"
        android:text="@string/score_unit_settings_dialog_label"
        app:layout_constraintBottom_toTopOf="@id/color_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/label_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="null"
        android:inputType="text"
        android:maxLength="40"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier1"/>

    <TextView
        android:id="@+id/color_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:labelFor="@id/color_spinner"
        android:text="@string/score_unit_settings_dialog_color"
        app:layout_constraintBottom_toTopOf="@id/step_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text_view"/>

    <Spinner
        android:id="@+id/color_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/color_text_view"
        app:layout_constraintBottom_toBottomOf="@id/color_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier1"/>

    <TextView
        android:id="@+id/step_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:labelFor="@id/step_edit_text"
        android:text="@string/score_unit_settings_dialog_step"
        app:layout_constraintBottom_toTopOf="@id/style_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_text_view"/>

    <EditText
        android:id="@+id/step_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:autofillHints="null"
        android:inputType="number"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/step_text_view"
        app:layout_constraintEnd_toStartOf="@id/step_check_box"
        app:layout_constraintStart_toEndOf="@id/barrier1"/>

    <CheckBox
        android:id="@+id/step_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/all"
        app:layout_constraintStart_toEndOf="@id/step_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/step_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/step_edit_text"/>

    <TextView
        android:id="@+id/style_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:labelFor="@id/style_spinner"
        android:text="@string/score_unit_settings_dialog_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_text_view"/>

    <Spinner
        android:id="@+id/style_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/style_text_view"
        app:layout_constraintEnd_toStartOf="@id/style_check_box"
        app:layout_constraintStart_toEndOf="@id/barrier1"
        app:layout_constraintTop_toTopOf="@+id/style_text_view"/>

    <CheckBox
        android:id="@+id/style_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/style_spinner"
        app:layout_constraintTop_toTopOf="@id/style_spinner"
        app:layout_constraintBottom_toBottomOf="@id/style_spinner"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="step_text_view,color_text_view,label_text_view,style_text_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>